Configure font font names in GFX unittests

Currently the GFX unittests assume a font called "Symbol" to be
available on all platforms. While the "Symbol" font may be available on
Ubuntu, it is a deprecated Type 1 package and stems from the
xfonts-mathml package on Debian, which is deprecated and no longer
maintained in favor of the newer STIX fonts [1].

In preparation for activating filtering for SNFT format font files, we
have to break with the assumption above and make at least some of the
used fonts in the gfx unittests configurable per OS.

This CL makes the symbol font name configurable and replace it with
"DejaVu Sans" on Linux.

In addition to reconfiguring the Symbol font this CL introduces a CJK
font as an example of a font that has a different descender/ascender
ratio to Arial as some unittests such as
StringSizeRespectsFontListMetrics require, since the newly chosen symbol
font on Linux does not that expose that property.

To make StringSizeRespectsFontListMetrics more robust, this CL adds
additional assertions based on GetFontSpansForTesting.

[1] https://tracker.debian.org/pkg/xfonts-mathml

BUG=632142

Review-Url: https://codereview.chromium.org/2302313002
Cr-Commit-Position: refs/heads/master@{#417244}

Former-commit-id: bdbc597424976a0b2f23b38b0c3630b636347ad2