ui/gfx/font_names_testing.cc
@@ -1,0 +1,26 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2016 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+#include "ui/gfx/font_names_testing.h"
+
+#include "build/build_config.h"
+
+namespace gfx {
+
+#if defined(OS_LINUX)
+const char kSymbolFontName[] = "DejaVu Sans";
+#else
+const char kSymbolFontName[] = "Symbol";
+#endif
+
+#if defined(OS_LINUX)
+const char kCJKFontName[] = "Kochi Mincho";
+#elif defined(OS_MACOSX)
+const char kCJKFontName[] = "Heiti SC";
+#else
+const char kCJKFontName[] = "SimSun";
+#endif
+
+} // namespace gfx
